core/src/markdown/snapshots/hbt_core__markdown__tests__basic.snap
---
source: core/src/markdown/tests.rs
expression: collection
---
version: 0.1.0
length: 3
value:
  - id: 0
    entity:
      uri: "https://foo.com/"
      createdAt: 1700092800
      updatedAt: []
      names:
        - Foo
      labels:
        - Foo
      shared: false
      toRead: false
      isFeed: false
    edges: []
  - id: 1
    entity:
      uri: "https://bar.com/"
      createdAt: 1700092800
      updatedAt: []
      names: []
      labels:
        - Bar
        - Foo
      shared: false
      toRead: false
      isFeed: false
    edges: []
  - id: 2
    entity:
      uri: "https://example.com/"
      createdAt: 1700092800
      updatedAt: []
      names:
        - "Hello, world!"
      labels:
        - Misc
      shared: false
      toRead: false
      isFeed: false
    edges: []
