core/src/markdown/snapshots/hbt_core__markdown__tests__descending_dates.snap
---
source: core/src/markdown/tests.rs
expression: collection
---
version: 0.1.0
length: 1
value:
  - id: 0
    entity:
      uri: "https://foo.com/"
      createdAt: 1701734400
      updatedAt:
        - 1701820800
      names:
        - Bar
        - Foo
      labels:
        - Bar
        - Foo
      shared: false
      toread: false
      isFeed: false
    edges: []
