core/src/markdown/snapshots/hbt_core__markdown__tests__no_parent.snap
---
source: core/src/markdown/tests.rs
expression: collection
---
version: 0.1.0
length: 2
value:
  - id: 0
    entity:
      uri: "https://foo.com/"
      createdAt: 1700006400
      updatedAt: []
      names:
        - Foo
      labels: []
      shared: false
      toRead: false
      isFeed: false
    edges: []
  - id: 1
    entity:
      uri: "https://bar.com/"
      createdAt: 1700006400
      updatedAt: []
      names:
        - Bar
      labels: []
      shared: false
      toRead: false
      isFeed: false
    edges: []
