core/src/markdown/snapshots/hbt_core__markdown__tests__no_title.snap
---
source: core/src/markdown/tests.rs
expression: collection
---
version: 0.1.0
length: 1
value:
  - id: 0
    entity:
      uri: "https://foo.com/"
      createdAt: 1700006400
      updatedAt: []
      names: []
      labels: []
      shared: false
      toread: false
      isFeed: false
    edges: []
